--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -1103,13 +1103,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Resample the training data with SMOTEENN\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
-    "# YOUR CODE HERE"
+    "from imblearn.combine import SMOTEENN\n",
+    "smote_enn = SMOTEENN(random_state=1)\n",
+    "X_resampled, y_resampled = smote_enn.fit_resample(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Counter()"
    ]
   },
   {
@@ -1119,7 +1130,9 @@
    "outputs": [],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "model = LogisticRegression(solver=\"lbfgs\", random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)\n",
+    "y_pred = model.predict(X_test)"
    ]
   },
   {
@@ -1129,7 +1142,7 @@
    "outputs": [],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -1139,7 +1152,7 @@
    "outputs": [],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -1149,7 +1162,7 @@
    "outputs": [],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
