Adding final challenge files

--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -342,12 +342,12 @@
    "outputs": [],
    "source": [
     "# Create our features\n",
-    "dummy_df = pd.get_dummies(df, columns=[\"home_ownership\", \"verification_status\", \"issue_d\", \"pymnt_plan\", \"initial_list_status\", \"next_pymnt_d\", \"application_type\",  \"hardship_flag\", \"debt_settlement_flag\"])\n",
+    "dummy_df = pd.get_dummies(df, columns=[\"home_ownership\", \"verification_status\", \"loan_status\", \"issue_d\", \"pymnt_plan\", \"initial_list_status\", \"next_pymnt_d\", \"application_type\",  \"hardship_flag\", \"debt_settlement_flag\"])\n",
     "\n",
-    "X = dummy_df.drop(columns=['loan_status'])\n",
+    "X = dummy_df.drop(columns=['loan_status_high_risk', \"loan_status_low_risk\"])\n",
     "\n",
     "# Create our target\n",
-    "y = dummy_df['loan_status']"
+    "y = dummy_df['loan_status_high_risk']"
    ]
   },
   {
@@ -672,32 +672,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "low_risk     68470\n",
-       "high_risk      347\n",
-       "Name: loan_status, dtype: int64"
+       "0    68470\n",
+       "1      347\n",
+       "Name: loan_status_high_risk, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check the balance of our target values\n",
-    "dummy_df['loan_status'].value_counts()"
+    "dummy_df['loan_status_high_risk'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({0: 51366, 1: 246})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -730,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,16 +756,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7887512850910909"
+       "0.7664150126425178"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,17 +778,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   71,    30],\n",
-       "       [ 2146, 14958]], dtype=int64)"
+       "array([[15210,  1894],\n",
+       "       [   36,    65]], dtype=int64)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -798,10 +809,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.03      0.70      0.87      0.06      0.78      0.60       101\n",
-      "   low_risk       1.00      0.87      0.70      0.93      0.78      0.63     17104\n",
+      "          0       1.00      0.89      0.64      0.94      0.76      0.59     17104\n",
+      "          1       0.03      0.64      0.89      0.06      0.76      0.56       101\n",
       "\n",
-      "avg / total       0.99      0.87      0.70      0.93      0.78      0.63     17205\n",
+      "avg / total       0.99      0.89      0.65      0.94      0.76      0.59     17205\n",
       "\n"
      ]
     }
@@ -813,29 +824,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.01057991 0.0296696  0.01980243 0.01483256 0.01747063 0.00308285\n",
-      " 0.00621641 0.00738223 0.00201526 0.01492666 0.01020921 0.01488107\n",
-      " 0.01685829 0.05883807 0.05625614 0.07876809 0.05355513 0.00699883\n",
-      " 0.         0.         0.05003318 0.00071503 0.         0.\n",
-      " 0.00419858 0.0128559  0.00975384 0.00748972 0.00486002 0.00656143\n",
-      " 0.01353413 0.01196899 0.01311545 0.00401892 0.00563455 0.01489935\n",
-      " 0.01304461 0.01336476 0.0062406  0.00608322 0.01277358 0.0067145\n",
-      " 0.0133229  0.01326593 0.01461382 0.00027308 0.         0.01392109\n",
-      " 0.01485945 0.00939335 0.01098295 0.00617089 0.01057536 0.01522071\n",
-      " 0.00375719 0.00686666 0.00963247 0.00757054 0.00872448 0.00966205\n",
-      " 0.00833097 0.01032007 0.00727267 0.00862894 0.         0.\n",
-      " 0.00099569 0.00754881 0.01303005 0.00513105 0.00137279 0.\n",
-      " 0.01448769 0.01641297 0.0130453  0.01279909 0.0004956  0.00145897\n",
-      " 0.00282452 0.00291332 0.00220495 0.00150464 0.00193258 0.00564021\n",
-      " 0.02112913 0.01511524 0.         0.00110057 0.00115207 0.005106\n",
-      " 0.00503665 0.0019016  0.00209124 0.         0.        ]\n"
+      "[0.01358415 0.03313865 0.01936975 0.01573098 0.01677916 0.00455951\n",
+      " 0.00442023 0.00905702 0.00161502 0.01318867 0.01021953 0.01260775\n",
+      " 0.01743918 0.0505909  0.06396935 0.08200603 0.05744347 0.00865553\n",
+      " 0.         0.         0.04957836 0.0002721  0.         0.\n",
+      " 0.00373367 0.01367209 0.00861757 0.00526979 0.00603462 0.00864958\n",
+      " 0.01591815 0.01243078 0.0140656  0.00439536 0.00677843 0.01372025\n",
+      " 0.01262996 0.01364048 0.00694554 0.00661302 0.01043099 0.00999587\n",
+      " 0.01453143 0.01045808 0.0142972  0.         0.         0.01463259\n",
+      " 0.01319728 0.01105079 0.01024485 0.00587919 0.0127724  0.0144767\n",
+      " 0.00423096 0.00864769 0.00819354 0.00710477 0.01024546 0.00809208\n",
+      " 0.00598741 0.00868509 0.00767399 0.00819549 0.         0.\n",
+      " 0.00192947 0.00579616 0.00845097 0.00829012 0.00190826 0.\n",
+      " 0.01690029 0.00974587 0.01501943 0.01136895 0.0004286  0.00136536\n",
+      " 0.00134161 0.00160077 0.00207572 0.00112048 0.0013996  0.00482239\n",
+      " 0.02047701 0.01260405 0.         0.00161812 0.00146753 0.00631786\n",
+      " 0.00494896 0.00139051 0.00124785 0.         0.        ]\n"
      ]
     }
    ],
@@ -854,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +887,7 @@
        "0.931601605553446"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,17 +899,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   93,     8],\n",
-       "       [  985, 16119]], dtype=int64)"
+       "array([[16119,   985],\n",
+       "       [    8,    93]], dtype=int64)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -919,8 +930,8 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.09      0.92      0.94      0.16      0.93      0.87       101\n",
-      "   low_risk       1.00      0.94      0.92      0.97      0.93      0.87     17104\n",
+      "          0       1.00      0.94      0.92      0.97      0.93      0.87     17104\n",
+      "          1       0.09      0.92      0.94      0.16      0.93      0.87       101\n",
       "\n",
       "avg / total       0.99      0.94      0.92      0.97      0.93      0.87     17205\n",
       "\n"
