--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -286,7 +286,7 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,22 +333,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create our features\n",
-    "dummy_df = pd.get_dummies(df, columns=[\"home_ownership\", \"verification_status\", \"issue_d\", \"pymnt_plan\", \"initial_list_status\", \"next_pymnt_d\", \"application_type\",  \"hardship_flag\", \"debt_settlement_flag\"])\n",
+    "dummy_df = pd.get_dummies(df, columns=[\"home_ownership\", \"verification_status\", \"loan_status\", \"issue_d\", \"pymnt_plan\", \"initial_list_status\", \"next_pymnt_d\", \"application_type\",  \"hardship_flag\", \"debt_settlement_flag\"])\n",
     "\n",
-    "X = dummy_df.drop(columns=['loan_status'])\n",
+    "X = dummy_df.drop(columns=['loan_status_high_risk', 'loan_status_low_risk'])\n",
     "\n",
     "# Create our target\n",
-    "y = dummy_df['loan_status']"
+    "y = dummy_df['loan_status_high_risk']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,39 +668,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "low_risk     68470\n",
-       "high_risk      347\n",
-       "Name: loan_status, dtype: int64"
+       "0    68470\n",
+       "1      347\n",
+       "Name: loan_status_high_risk, dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check the balance of our target values\n",
-    "dummy_df[\"loan_status\"].value_counts()"
+    "dummy_df[\"loan_status_high_risk\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'low_risk': 51366, 'high_risk': 246})"
+       "Counter({0: 51366, 1: 246})"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,16 +737,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'low_risk': 51366, 'high_risk': 51366})"
+       "Counter({0: 51366, 1: 51366})"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
        "0.6438627638488825"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,15 +807,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[   64    37]\n",
-      " [ 5266 11838]]\n"
+      "[[10171  6933]\n",
+      " [   31    70]]\n"
      ]
     }
    ],
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -838,10 +838,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.63      0.69      0.02      0.66      0.44       101\n",
-      "   low_risk       1.00      0.69      0.63      0.82      0.66      0.44     17104\n",
+      "          0       1.00      0.59      0.69      0.74      0.64      0.41     17104\n",
+      "          1       0.01      0.69      0.59      0.02      0.64      0.42       101\n",
       "\n",
-      "avg / total       0.99      0.69      0.63      0.81      0.66      0.44     17205\n",
+      "avg / total       0.99      0.60      0.69      0.74      0.64      0.41     17205\n",
       "\n"
      ]
     }
@@ -861,16 +861,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'low_risk': 51366, 'high_risk': 51366})"
+       "Counter({0: 51366, 1: 51366})"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
        "0.6628910844779521"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,17 +919,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   64,    37],\n",
-       "       [ 5266, 11838]], dtype=int64)"
+       "array([[11838,  5266],\n",
+       "       [   37,    64]], dtype=int64)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -950,8 +950,8 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.63      0.69      0.02      0.66      0.44       101\n",
-      "   low_risk       1.00      0.69      0.63      0.82      0.66      0.44     17104\n",
+      "          0       1.00      0.69      0.63      0.82      0.66      0.44     17104\n",
+      "          1       0.01      0.63      0.69      0.02      0.66      0.44       101\n",
       "\n",
       "avg / total       0.99      0.69      0.63      0.81      0.66      0.44     17205\n",
       "\n"
@@ -982,16 +982,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'high_risk': 246, 'low_risk': 246})"
+       "Counter({0: 246, 1: 246})"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
        "0.5447339051023905"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,17 +1040,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   70,    31],\n",
-       "       [10324,  6780]], dtype=int64)"
+       "array([[ 6780, 10324],\n",
+       "       [   31,    70]], dtype=int64)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1071,8 +1071,8 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.69      0.40      0.01      0.52      0.28       101\n",
-      "   low_risk       1.00      0.40      0.69      0.57      0.52      0.27     17104\n",
+      "          0       1.00      0.40      0.69      0.57      0.52      0.27     17104\n",
+      "          1       0.01      0.69      0.40      0.01      0.52      0.28       101\n",
       "\n",
       "avg / total       0.99      0.40      0.69      0.56      0.52      0.27     17205\n",
       "\n"
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,16 +1116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'high_risk': 68458, 'low_risk': 62022})"
+       "Counter({0: 62022, 1: 68458})"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,16 +1148,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6748328802711889"
+       "0.6659651728736953"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,17 +1169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   77,    24],\n",
-       "       [ 7059, 10045]], dtype=int64)"
+       "array([[9911, 7193],\n",
+       "       [  25,   76]], dtype=int64)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1200,10 +1200,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.76      0.59      0.02      0.67      0.46       101\n",
-      "   low_risk       1.00      0.59      0.76      0.74      0.67      0.44     17104\n",
+      "          0       1.00      0.58      0.75      0.73      0.66      0.43     17104\n",
+      "          1       0.01      0.75      0.58      0.02      0.66      0.44       101\n",
       "\n",
-      "avg / total       0.99      0.59      0.76      0.74      0.67      0.44     17205\n",
+      "avg / total       0.99      0.58      0.75      0.73      0.66      0.43     17205\n",
       "\n"
      ]
     }
